@@ -658,6 +658,102 @@ name|attr
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|attr
+operator|.
+name|getUid
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|attr
+operator|.
+name|getGid
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|attr
+operator|.
+name|getMode
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|457
+argument_list|)
+expr_stmt|;
+comment|// 711
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|attr
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|NfsFileType
+operator|.
+name|NFSDIR
+operator|.
+name|toValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Access should be allowed for dir as mode is 711 and GID matches"
+argument_list|,
+literal|2
+comment|/* Lookup */
+argument_list|,
+name|Nfs3Utils
+operator|.
+name|getAccessRightsForUserGroup
+argument_list|(
+literal|3
+argument_list|,
+literal|10
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|5
+block|,
+literal|16
+block|,
+literal|11
+block|}
+argument_list|,
+name|attr
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
